--- a/Purchasing.Jobs.NotificationsCommon/packages.config
+++ b/Purchasing.Jobs.NotificationsCommon/packages.config
@@ -7,5 +7,7 @@
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net451" />
   <package id="Sendgrid" version="5.0.0" targetFramework="net451" />
   <package id="SendGrid.SmtpApi" version="1.1.3" targetFramework="net451" />
+  <package id="Serilog" version="1.5.7" targetFramework="net451" />
   <package id="SparkPost" version="1.0.7" targetFramework="net451" />
+  <package id="StackifyLib" version="1.12.0.0" targetFramework="net451" />
 </packages>
