--- a/Purchasing.Mvc/Web.config
+++ b/Purchasing.Mvc/Web.config
@@ -23,7 +23,7 @@
     <add key="PersonLookupUrl" value="http://directory.ucdavis.edu/search/directory_results.shtml?filter=" />
   </appSettings>
   <connectionStrings>
-    <add name="MainDB" connectionString="Server=tcp:qb5fm1u0eb.database.windows.net;Database=PrePurchasing;User ID=opp;Password=***REMOVED***;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
+    <add name="MainDB" connectionString="Server=tcp:qb5fm1u0eb.database.windows.net;Database=PrePurchasing;User ID=opp;Password=***;Trusted_Connection=False;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
