--- a/Purchasing.Jobs.NightlySync/packages.config
+++ b/Purchasing.Jobs.NightlySync/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
+  <package id="OctoPack" version="3.0.71" targetFramework="net451" developmentDependency="true" />
   <package id="Serilog" version="1.5.7" targetFramework="net451" />
   <package id="Serilog.Sinks.ElmahIO" version="1.5.8" targetFramework="net451" />
   <package id="Serilog.Sinks.Stackify" version="1.0.12.0" targetFramework="net451" />
