--- a/Purchasing.Jobs.UpdateLookupIndexes/packages.config
+++ b/Purchasing.Jobs.UpdateLookupIndexes/packages.config
@@ -14,6 +14,7 @@
   <package id="NEST" version="1.4.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net451" />
+  <package id="OctoPack" version="3.0.71" targetFramework="net451" developmentDependency="true" />
   <package id="Serilog" version="1.5.7" targetFramework="net451" />
   <package id="Serilog.Sinks.Stackify" version="1.0.12.0" targetFramework="net451" />
   <package id="StackifyLib" version="1.12.0.0" targetFramework="net451" />
