--- a/Purchasing.Mvc/packages.config
+++ b/Purchasing.Mvc/packages.config
@@ -33,6 +33,7 @@
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
   <package id="NHibernate" version="3.3.1.4000" targetFramework="net45" />
   <package id="NPOI" version="2.0.6" targetFramework="net451" />
+  <package id="OctoPack" version="3.0.71" targetFramework="net451" developmentDependency="true" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="Sendgrid" version="5.0.0" targetFramework="net451" />
   <package id="SendGrid.SmtpApi" version="1.1.3" targetFramework="net451" />
