--- a/Purchasing.Tests/packages.config
+++ b/Purchasing.Tests/packages.config
@@ -14,7 +14,7 @@
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net451" />
   <package id="NHibernate" version="3.3.1.4000" targetFramework="net451" />
   <package id="RhinoMocks" version="3.6" targetFramework="net451" />
-  <package id="SQLitex64" version="1.0.66" requireReinstallation="True" />
+  <package id="SQLitex64" version="1.0.66" />
   <package id="UcdArch" version="5.1.0.145" targetFramework="net451" />
   <package id="UcdArch.NHibernate" version="5.1.0.145" targetFramework="net451" />
 </packages>
