--- a/Purchasing.Mvc/packages.config
+++ b/Purchasing.Mvc/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
+  <package id="AzureActiveDirectorySearcher" version="0.5.0.5" targetFramework="net452" />
   <package id="bootstrap" version="3.3.0" targetFramework="net45" />
   <package id="Castle.Core" version="3.2.0" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net45" />
@@ -23,6 +24,11 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.Azure.ActiveDirectory.GraphClient" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net452" />
+  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net452" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.10.305161347" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net451" />
@@ -42,6 +48,7 @@
   <package id="SerilogWeb.Classic" version="2.0.6" targetFramework="net451" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net451" />
   <package id="StackifyLib" version="1.12.0.0" targetFramework="net451" />
+  <package id="System.Spatial" version="5.6.4" targetFramework="net452" />
   <package id="UcdArch" version="5.1.0.145" targetFramework="net451" />
   <package id="UcdArch.Mvc" version="5.1.0.144" targetFramework="net45" />
   <package id="UcdArch.NHibernate" version="5.1.0.144" targetFramework="net451" />
