--- a/Purchasing.WS/app.config
+++ b/Purchasing.WS/app.config
@@ -1,42 +1,46 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="purchaseDocumentsInterfaceServiceSOAPSoapBinding"/>
+        <binding name="purchaseDocumentsInterfaceServiceSOAPSoapBinding" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://kfs1.ucdavis.edu/kfs-prd/remoting/purchaseDocumentsInterfaceServiceSOAP" binding="basicHttpBinding" bindingConfiguration="purchaseDocumentsInterfaceServiceSOAPSoapBinding" contract="PurchaseDocumentService.purchasingDocumentsInterfaceServiceSOAP" name="purchasingDocumentsInterfaceServiceSOAPPort"/>
+      <endpoint address="http://kfs1.ucdavis.edu/kfs-prd/remoting/purchaseDocumentsInterfaceServiceSOAP" binding="basicHttpBinding" bindingConfiguration="purchaseDocumentsInterfaceServiceSOAPSoapBinding" contract="PurchaseDocumentService.purchasingDocumentsInterfaceServiceSOAP" name="purchasingDocumentsInterfaceServiceSOAPPort" />
     </client>
   </system.serviceModel>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-5.2.2.0" newVersion="5.2.2.0"/>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.2.0" newVersion="5.2.2.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-3.3.1.4000" newVersion="3.3.1.4000"/>
+        <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.1.4000" newVersion="3.3.1.4000" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="FluentNHibernate" publicKeyToken="8aa435e3cb308880" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-1.4.0.0" newVersion="1.4.0.0"/>
+        <assemblyIdentity name="FluentNHibernate" publicKeyToken="8aa435e3cb308880" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.4.0.0" newVersion="1.4.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <appSettings>
-    <add key="Stackify.AppName" value="Purchasing"/>
-    <add key="Stackify.Environment" value=""/>
-    <add key="Stackify.ProxyServer" value=""/>
-    <add key="Stackify.ApiKey" value="[External]"/>
+    <add key="Stackify.AppName" value="Purchasing" />
+    <add key="Stackify.Environment" value="" />
+    <add key="Stackify.ProxyServer" value="" />
+    <add key="Stackify.ApiKey" value="[External]" />
   </appSettings>
 </configuration>
