--- a/Purchasing.Mvc/packages.config
+++ b/Purchasing.Mvc/packages.config
@@ -10,11 +10,12 @@
   <package id="Dapper" version="1.38" targetFramework="net451" />
   <package id="DataAnnotationsExtensions" version="1.1.0.0" targetFramework="net45" />
   <package id="DataAnnotationsExtensions.MVC3" version="1.1.0.0" targetFramework="net45" />
-  <package id="Elasticsearch.Net" version="2.4.7" targetFramework="net452" />
+  <package id="Elasticsearch.Net" version="2.5.4" targetFramework="net462" />
   <package id="elmah" version="1.2.2" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
   <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net45" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net45" />
+  <package id="ietws" version="0.1.7" targetFramework="net462" />
   <package id="iTextSharp" version="5.5.3" targetFramework="net451" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
@@ -35,8 +36,8 @@
   <package id="MiniProfiler" version="3.1.1.140" targetFramework="net451" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="MvcContrib.Mvc3.FluentHtml-ci" version="3.0.100.0" targetFramework="net45" />
-  <package id="NEST" version="2.4.7" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="NEST" version="2.5.4" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="NHibernate" version="3.3.1.4000" targetFramework="net45" />
   <package id="NPOI" version="2.0.6" targetFramework="net451" />
   <package id="OctoPack" version="3.0.71" targetFramework="net451" developmentDependency="true" />
