--- a/Purchasing.Mvc/Web.config
+++ b/Purchasing.Mvc/Web.config
@@ -21,6 +21,7 @@
     <add key="Stackify.Environment" value="[External]" />
     <add key="Stackify.ApiKey" value="[External]" />
     <add key="PersonLookupUrl" value="http://directory.ucdavis.edu/search/directory_results.shtml?filter=" />
+    <add key="IetWsKey" value="[External]"/>
   </appSettings>
   <connectionStrings>
     <add name="MainDB" connectionString="data source=.\SQLExpress;Initial Catalog=PrePurchasing;Integrated Security=true;" providerName="System.Data.SqlClient" />
