--- a/Purchasing.Core/packages.config
+++ b/Purchasing.Core/packages.config
@@ -3,11 +3,13 @@
   <package id="AutoMapper" version="3.3.1" targetFramework="net451" />
   <package id="Dapper" version="1.38" targetFramework="net451" />
   <package id="DataAnnotationsExtensions" version="1.1.0.0" targetFramework="net451" />
-  <package id="Elasticsearch.Net" version="2.4.7" targetFramework="net452" requireReinstallation="true" />
+  <package id="Elasticsearch.Net" version="7.3.0" targetFramework="net462" />
   <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net451" />
   <package id="Iesi.Collections" version="3.2.0.4000" requireReinstallation="True" />
-  <package id="NEST" version="2.4.7" targetFramework="net452" requireReinstallation="true" />
+  <package id="NEST" version="7.3.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="NHibernate" version="3.3.1.4000" targetFramework="net451" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net462" />
   <package id="UcdArch" version="5.1.0.145" targetFramework="net451" />
 </packages>
