Use app setting for AFS lookup url

--- a/Purchasing.Mvc/Web.config
+++ b/Purchasing.Mvc/Web.config
@@ -15,6 +15,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="AfsUrl" value="https://kfs-test.ucdavis.edu/kfs-stg/remoting/purchaseDocumentsInterfaceServiceSOAP" />
+    <add key="AfsLookupUrl" value="https://kfs.ucdavis.edu/kfs-prd"/> <!-- This will be changing to https://kfs-uat.ucdavis.edu/fin for testing. probably just the fin for production -->
     <add key="AfsRoleUrl" value="http://kfs-test.ucdavis.edu/kfs-stg/remoting/financialSystemRoleServiceSOAP" />
     <add key="AfsToken" value="stage" />
     <add key="Stackify.AppName" value="Purchasing" />
