WIP: remove all .Net Framework deps

--- a/Purchasing.Jobs.NotificationsCommon/Purchasing.Jobs.NotificationsCommon.csproj
+++ b/Purchasing.Jobs.NotificationsCommon/Purchasing.Jobs.NotificationsCommon.csproj
@@ -13,7 +13,7 @@
 	<ItemGroup>
 		<PackageReference Include="Sendgrid" Version="9.27.0"/>
 		<PackageReference Include="Flurl.Http" Version="3.2.2"/>
-		<PackageReference Include="SparkPost" Version="1.14.0"/>
+		<PackageReference Include="SparkPost.DotNetCore" Version="1.0.0"/>
 	</ItemGroup>
 	<ItemGroup>
 		<Content Include="appsettings.json"/>
