WIP: use IConfiguration everywhere

--- a/Purchasing.Mvc/bundleConfig.json
+++ b/Purchasing.Mvc/bundleConfig.json
@@ -5,11 +5,6 @@
   },
   {
     "outputFileName": "wwwroot/js/main.min.js",
-    "inputFiles": ["wwwroot/js/util.js", "wwwroot/js/main.js"],
-    "minify": {
-      "enabled": true,
-      "renameLocals": true
-    },
-    "sourceMap": false
+    "inputFiles": ["wwwroot/js/util.js", "wwwroot/js/main.js"]
   }
 ]
