--- a/Purchasing.Core/Purchasing.Core.csproj
+++ b/Purchasing.Core/Purchasing.Core.csproj
@@ -23,6 +23,9 @@
 		<CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
 	</PropertyGroup>
 	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App"/>
+	</ItemGroup>
+  <ItemGroup>
 		<ProjectReference Include="..\..\UCDArch\UCDArch\UCDArch.Core\UCDArch.Core.csproj"/>
 	</ItemGroup>
 	<ItemGroup>
@@ -30,7 +33,6 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1"/>
 		<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0"/>
 		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0"/>
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0"/>
 		<PackageReference Include="AutoMapper" Version="11.0.1"/>
 		<PackageReference Include="Dapper" Version="2.0.123"/>
 		<PackageReference Include="FluentNHibernate" Version="3.1.0"/>
