--- a/Purchasing.Mvc/Purchasing.Mvc.csproj
+++ b/Purchasing.Mvc/Purchasing.Mvc.csproj
@@ -68,6 +68,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.3"/>
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0"/>
     <PackageReference Include="Serilog.Enrichers.ClientInfo" Version="1.1.4"/>
+    <PackageReference Include="Serilog.Exceptions" Version="8.1.0"/>
 		<PackageReference Include="Castle.Windsor.Extensions.DependencyInjection" Version="5.1.1"/>
     <PackageReference Include="BundlerMinifier.Core " Version="3.2.449"/>
 	</ItemGroup>
