Fix configuration and secrets issues

--- a/Purchasing.Jobs.NotificationsCommon/Purchasing.Jobs.NotificationsCommon.csproj
+++ b/Purchasing.Jobs.NotificationsCommon/Purchasing.Jobs.NotificationsCommon.csproj
@@ -5,6 +5,7 @@
 		<SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
 		<RestorePackages>true</RestorePackages>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <Deterministic>false</Deterministic>
 	</PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Purchasing.Core\Purchasing.Core.csproj"/>
