--- a/Purchasing.Mvc/appsettings.json
+++ b/Purchasing.Mvc/appsettings.json
@@ -21,10 +21,25 @@
   "PersonLookupUrl": "http://directory.ucdavis.edu/search/directory_results.shtml?filter=",
   "IetWsKey": "[External]",
   "Stackify.ElasticUrl": "[External]",
+  "MainDB": {
+    "Schema": "PrePurchasing.dbo",
+    "BatchSize": 25
+  },
   "ConnectionStrings": {
     "MainDB": "data source=.\\SQLExpress;Initial Catalog=PrePurchasing;Integrated Security=true;"
   },
   "userlistpassword": "[External]",
   "SendGridPassword": "[External]",
-  "SendGridUserName": "[External]"
+  "SendGridUserName": "[External]",
+  "CasUrl": "https://ssodev.ucdavis.edu/cas",
+  "ElasticSearchUrl": "[External]",
+  "FAQUrl": "https://computing.caes.ucdavis.edu/documentation/purchasing",
+  "feedbackUrl": "https://feedback.ucdavis.edu/app/Purchasing",
+  "LDAPSettings": {
+    "LDAPUser": "[External]",
+    "LDAPPassword": "[External]"
+  },
+  "ValidationKey": "[External]",
+  "AzureStorageAccountName": "[External]",
+  "AzureStorageKey": "[External]"
 }
