--- a/Purchasing.Mvc/Purchasing.Mvc.csproj
+++ b/Purchasing.Mvc/Purchasing.Mvc.csproj
@@ -1,83 +1,103 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-	<PropertyGroup>
-		<OutputType>Exe</OutputType>
-		<SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-		<RestorePackages>true</RestorePackages>
-	</PropertyGroup>
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
+    <UserSecretsId>8db1af8d-c21d-4a0d-a9d9-54009eb737eb</UserSecretsId>
+    <Title>Purchasing.Mvc</Title>
+    <Product>Purchasing.Mvc</Product>
+    <Copyright>Copyright ©  2015</Copyright>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Version)' == '' ">
+    <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">1.0.0</VersionPrefix>
+    <Version Condition=" '$(VersionSuffix)' != '' ">$(VersionPrefix)-$(VersionSuffix)</Version>
+    <Version Condition=" '$(Version)' == '' ">$(VersionPrefix)</Version>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
     <LangVersion>10.0</LangVersion>
-		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-		<OutputPath>bin\</OutputPath>
-	</PropertyGroup>
-	<ItemGroup>
-		<Compile Update="App_GlobalResources\Resources.Designer.cs">
-			<DependentUpon>Resources.resx</DependentUpon>
-			<AutoGen>True</AutoGen>
-			<DesignTime>True</DesignTime>
-		</Compile>
-		<Compile Update="Global.asax.cs">
-			<DependentUpon>Global.asax</DependentUpon>
-		</Compile>
-	</ItemGroup>
-	<ItemGroup>
-		<Content Update="Web.Debug.config">
-			<DependentUpon>Web.config</DependentUpon>
-		</Content>
-		<Content Update="Web.Release.config">
-			<DependentUpon>Web.config</DependentUpon>
-		</Content>
-	</ItemGroup>
-	<ItemGroup>
-		<Folder Include="App_Data\"/>
-	</ItemGroup>
-	<ItemGroup>
-		<ProjectReference Include="..\Purchasing.Core\Purchasing.Core.csproj"/>
-		<ProjectReference Include="..\Purchasing.Jobs.CreateOrderIndexes\Purchasing.Jobs.CreateOrderIndexes.csproj"/>
-		<ProjectReference Include="..\Purchasing.Jobs.UpdateLookupIndexes\Purchasing.Jobs.UpdateLookupIndexes.csproj"/>
-		<ProjectReference Include="..\Purchasing.Jobs.UpdateOrderIndexes\Purchasing.Jobs.UpdateOrderIndexes.csproj"/>
-		<ProjectReference Include="..\Purchasing.WS\Purchasing.WS.csproj"/>
-	</ItemGroup>
-	<ItemGroup>
-		<EmbeddedResource Update="App_GlobalResources\Resources.resx">
-			<Generator>PublicResXFileCodeGenerator</Generator>
-			<LastGenOutput>Resources.Designer.cs</LastGenOutput>
-			<SubType>Designer</SubType>
-		</EmbeddedResource>
-	</ItemGroup>
-	<ItemGroup>
-		<ProjectReference Include="..\..\UCDArch\UCDArch\UCDArch.Web\UCDArch.Web.csproj"/>
-    <ProjectReference Include="..\..\UCDArch\UCDArch\UCDArch.Core.DataAnnotationsValidator\UCDArch.Core.DataAnnotationsValidator.csproj"/>
-	</ItemGroup>
-	<ItemGroup>
-		<PackageReference Include="bootstrap" Version="5.1.3"/>
-		<PackageReference Include="ietws" Version="0.2.8"/>
-		<PackageReference Include="itext7" Version="7.2.1"/>
-		<PackageReference Include="jQuery" Version="3.6.0"/>
-		<PackageReference Include="jQuery.Validation" Version="1.19.3"/>
-		<PackageReference Include="Lucene.Net" Version="4.8.0-beta00016"/>
-		<PackageReference Include="Microsoft.jQuery.Unobtrusive.Validation" Version="3.2.12"/>
-		<PackageReference Include="Modernizr" Version="2.8.3"/>
-		<PackageReference Include="Respond" Version="1.4.2"/>
-		<PackageReference Include="Sendgrid" Version="9.27.0"/>
-		<PackageReference Include="System.DirectoryServices.Protocols" Version="6.0.1"/>
-		<PackageReference Include="Antlr4" Version="4.6.6"/>
-		<PackageReference Include="AzureActiveDirectorySearcher" Version="1.0.0"/>
-		<PackageReference Include="MiniProfiler.AspNetCore" Version="4.2.22"/>
-		<PackageReference Include="NPOI" Version="2.5.5"/>
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.3"/>
-    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0"/>
-    <PackageReference Include="Serilog.Enrichers.ClientInfo" Version="1.1.4"/>
-    <PackageReference Include="Serilog.Exceptions" Version="8.1.0"/>
-		<PackageReference Include="Castle.Windsor.Extensions.DependencyInjection" Version="5.1.1"/>
-    <PackageReference Include="BundlerMinifier.Core" Version="3.2.449"/>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Update="App_GlobalResources\Resources.Designer.cs">
+      <DependentUpon>Resources.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Update="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Web.Debug.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </Content>
+    <Content Update="Web.Release.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Purchasing.Core\Purchasing.Core.csproj" />
+    <ProjectReference Include="..\Purchasing.Jobs.CreateOrderIndexes\Purchasing.Jobs.CreateOrderIndexes.csproj" />
+    <ProjectReference Include="..\Purchasing.Jobs.UpdateLookupIndexes\Purchasing.Jobs.UpdateLookupIndexes.csproj" />
+    <ProjectReference Include="..\Purchasing.Jobs.UpdateOrderIndexes\Purchasing.Jobs.UpdateOrderIndexes.csproj" />
+    <ProjectReference Include="..\Purchasing.WS\Purchasing.WS.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="App_GlobalResources\Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\UCDArch\UCDArch\UCDArch.Web\UCDArch.Web.csproj" />
+    <ProjectReference Include="..\..\UCDArch\UCDArch\UCDArch.Core.DataAnnotationsValidator\UCDArch.Core.DataAnnotationsValidator.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="bootstrap" Version="5.1.3" />
+    <PackageReference Include="ietws" Version="0.2.8" />
+    <PackageReference Include="itext7" Version="7.2.1" />
+    <PackageReference Include="jQuery" Version="3.6.0" />
+    <PackageReference Include="jQuery.Validation" Version="1.19.3" />
+    <PackageReference Include="Lucene.Net" Version="4.8.0-beta00016" />
+    <PackageReference Include="Microsoft.jQuery.Unobtrusive.Validation" Version="3.2.12" />
+    <PackageReference Include="Modernizr" Version="2.8.3" />
+    <PackageReference Include="Respond" Version="1.4.2" />
+    <PackageReference Include="Sendgrid" Version="9.27.0" />
+    <PackageReference Include="System.DirectoryServices.Protocols" Version="6.0.1" />
+    <PackageReference Include="Antlr4" Version="4.6.6" />
+    <PackageReference Include="AzureActiveDirectorySearcher" Version="1.0.0" />
+    <PackageReference Include="MiniProfiler.AspNetCore" Version="4.2.22" />
+    <PackageReference Include="NPOI" Version="2.5.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.3" />
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="Serilog.Enrichers.ClientInfo" Version="1.1.4" />
+    <PackageReference Include="Serilog.Exceptions" Version="8.1.0" />
+    <PackageReference Include="Castle.Windsor.Extensions.DependencyInjection" Version="5.1.1" />
+    <PackageReference Include="BundlerMinifier.Core" Version="3.2.449" />
     <PackageReference Include="AspNetCore.Security.CAS" Version="2.0.5" />
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.11.0"/>
-	</ItemGroup>
-  <Target Name="BundleMinify" BeforeTargets="BeforeBuild" Condition=" '$(Configuration)' == 'Release' ">
-    <Exec Command="dotnet bundle" />
-  </Target>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.11.0" />
+  </ItemGroup>
+
   <ItemGroup>
     <DotNetCliToolReference Include="BundlerMinifier.Core" Version="3.2.449" />
   </ItemGroup>
+
+  <Target Name="BundleMinify" BeforeTargets="BeforeBuild" Condition=" '$(Configuration)' == 'Release' ">
+    <Exec Command="dotnet bundle" />
+  </Target>
+
 </Project>
