--- a/Purchasing.WS/Purchasing.WS.csproj
+++ b/Purchasing.WS/Purchasing.WS.csproj
@@ -18,11 +18,18 @@
 		<IsWebBootstrapper>false</IsWebBootstrapper>
 		<UseApplicationTrust>false</UseApplicationTrust>
 		<BootstrapperEnabled>true</BootstrapperEnabled>
+    <Title>Purchasing.WS</Title>
+    <Product>Purchasing.WS</Product>
+    <Copyright>Copyright ©  2012</Copyright>
 	</PropertyGroup>
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
-		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	</PropertyGroup>
+  <PropertyGroup Condition=" '$(Version)' == '' ">
+    <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">1.1.0</VersionPrefix>
+    <Version Condition=" '$(VersionSuffix)' != '' ">$(VersionPrefix)-$(VersionSuffix)</Version>
+    <Version Condition=" '$(Version)' == '' ">$(VersionPrefix)</Version>
+  </PropertyGroup>
 	<ItemGroup>
 		<Compile Update="Service References\AzureStorage\Reference.cs">
 			<AutoGen>True</AutoGen>
