--- a/Purchasing.Jobs.Common/Purchasing.Jobs.Common.csproj
+++ b/Purchasing.Jobs.Common/Purchasing.Jobs.Common.csproj
@@ -4,8 +4,15 @@
 		<OutputType>Library</OutputType>
 		<SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
 		<RestorePackages>true</RestorePackages>
-		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <Title>Purchasing.Jobs.Common</Title>
+    <Product>Purchasing.Jobs.Common</Product>
+    <Copyright>Copyright ©  2015</Copyright>
 	</PropertyGroup>
+  <PropertyGroup Condition=" '$(Version)' == '' ">
+    <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">1.1.0</VersionPrefix>
+    <Version Condition=" '$(VersionSuffix)' != '' ">$(VersionPrefix)-$(VersionSuffix)</Version>
+    <Version Condition=" '$(Version)' == '' ">$(VersionPrefix)</Version>
+  </PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Purchasing.Core\Purchasing.Core.csproj"/>
 	</ItemGroup>
