--- a/Purchasing.Jobs.UpdateLookupIndexes/Purchasing.Jobs.UpdateLookupIndexes.csproj
+++ b/Purchasing.Jobs.UpdateLookupIndexes/Purchasing.Jobs.UpdateLookupIndexes.csproj
@@ -19,8 +19,15 @@
 		<IsWebBootstrapper>false</IsWebBootstrapper>
 		<UseApplicationTrust>false</UseApplicationTrust>
 		<BootstrapperEnabled>true</BootstrapperEnabled>
-		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <Title>Purchasing.Jobs.UpdateLookupIndexes</Title>
+    <Product>Purchasing.Jobs.UpdateLookupIndexes</Product>
+    <Copyright>Copyright ©  2015</Copyright>
 	</PropertyGroup>
+  <PropertyGroup Condition=" '$(Version)' == '' ">
+    <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">1.1.0</VersionPrefix>
+    <Version Condition=" '$(VersionSuffix)' != '' ">$(VersionPrefix)-$(VersionSuffix)</Version>
+    <Version Condition=" '$(Version)' == '' ">$(VersionPrefix)</Version>
+  </PropertyGroup>
 	<ItemGroup>
 		<None Update="settings.job">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
