--- a/Purchasing.Core/Purchasing.Core.csproj
+++ b/Purchasing.Core/Purchasing.Core.csproj
@@ -32,7 +32,7 @@
     <Version Condition=" '$(Version)' == '' ">$(VersionPrefix)</Version>
   </PropertyGroup>
   <ItemGroup>
-		<ProjectReference Include="..\..\UCDArch\UCDArch\UCDArch.Core\UCDArch.Core.csproj"/>
+		<ProjectReference Include="..\UCDArch\UCDArch.csproj"/>
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="NEST.JsonNetSerializer" Version="7.17.0"/>
