Improve job config and logging

--- a/Purchasing.Jobs.Common/appsettings.json
+++ b/Purchasing.Jobs.Common/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "Stackify.AppName": "Purchasing",
-  "Stackify.Environment": "",
+  "Stackify.AppName": "[External]",
+  "Stackify.Environment": "[External]",
   "Stackify.ProxyServer": "",
   "Stackify.ApiKey": "[External]",
   "Stackify.ElasticUrl": "[External]"
