--- a/Purchasing.Jobs.Common/Purchasing.Jobs.Common.csproj
+++ b/Purchasing.Jobs.Common/Purchasing.Jobs.Common.csproj
@@ -7,6 +7,7 @@
     <Title>Purchasing.Jobs.Common</Title>
     <Product>Purchasing.Jobs.Common</Product>
     <Copyright>Copyright ©  2015</Copyright>
+    <UserSecretsId>8db1af8d-c21d-4a0d-a9d9-54009eb737eb</UserSecretsId>
 	</PropertyGroup>
   <PropertyGroup Condition=" '$(Version)' == '' ">
     <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">1.1.0</VersionPrefix>
@@ -17,9 +18,11 @@
 		<ProjectReference Include="..\Purchasing.Core\Purchasing.Core.csproj"/>
 	</ItemGroup>
 	<ItemGroup>
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
 		<PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.4.1"/>
 		<PackageReference Include="CommonServiceLocator" Version="2.0.6"/>
 		<PackageReference Include="Ninject" Version="3.3.4"/>
+    <PackageReference Include="Serilog.Exceptions" Version="8.1.0" />
 		<PackageReference Include="Serilog.Sinks.ElmahIO" Version="4.1.12"/>
 	</ItemGroup>
 	<ItemGroup>
