--- a/Purchasing.Jobs.NightlySync/Purchasing.Jobs.NightlySync.csproj
+++ b/Purchasing.Jobs.NightlySync/Purchasing.Jobs.NightlySync.csproj
@@ -8,6 +8,7 @@
     <Product>Purchasing.Jobs.NightlySync</Product>
     <Copyright>Copyright ©  2015</Copyright>
     <Deterministic>false</Deterministic>
+    <UserSecretsId>8db1af8d-c21d-4a0d-a9d9-54009eb737eb</UserSecretsId>
 	</PropertyGroup>
   <PropertyGroup Condition=" '$(Version)' == '' ">
     <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">1.1.0</VersionPrefix>
